# gCP

./: .gitignore  CMakeLists.txt  GACM2023.cc  README.md  SPP2013.cc  WIP.cpp  clean.sh  elasticity.cc  gCPFEM.cc  polycrystal.cc  semicoupled_rve.cc  simple_shear.cc  step-15.cc  step-3.cc  step-3_trilinos.cc
.github/workflows/: main.yml
applications/: CMakeLists.txt  GACM2023.cc  SPP2013.cc  jacobian.cc  simple_shear.cc
documentation/: Doxyfile  mainpage.txt  mathjax_macros.js
gmsh/: hex_mesh_symmetric.geo
include/gCP/: assembly_data.h  boundary_conditions.h  constitutive_equations.h  constitutive_laws.h  crystal_data.h  fe_field.h  gradient_crystal_plasticity.h  line_search.h  postprocessing.h  quadrature_point_history.h  run_time_parameters.h  utilities.h
input/: prm.prm  simple_shear.prm  simple_shear_double_slip_ hl_125e-2_Ht_0.prm  simple_shear_double_slip_ hl_125e-2_Ht_2e-1.prm  simple_shear_double_slip_ hl_125e0_Ht_0.prm  simple_shear_double_slip_ hl_125e0_Ht_2e-1.prm  simple_shear_double_slip_hl_125e-2_Ht_0.prm  simple_shear_double_slip_hl_125e-2_Ht_2e-1.prm  simple_shear_double_slip_hl_125e0_Ht_0.prm  simple_shear_double_slip_hl_125e0_Ht_2e-1.prm  simple_shear_no_slips.prm  simple_shear_poly.prm  simple_shear_single_slip_ hl_125e-2_Ht_0.prm  simple_shear_single_slip_ hl_125e0_Ht_0.prm  simple_shear_single_slip_hl_125e-2_Ht_0.prm  simple_shear_single_slip_hl_125e0_Ht_0.prm  simple_shear_slip_normal.txt  simple_shear_slip_normals.txt
input/crystal_orientation/: euler_angles_0_3D.txt  euler_angles_10_random.txt  euler_angles_10_random_02.txt  euler_angles_10_random_03.txt  euler_angles_10_random_04.txt  euler_angles_10_random_05.txt  euler_angles_10_zeros.txt  euler_angles_3D.txt  euler_angles_3D_Andreas.txt  euler_angles_3D_Zeros.txt
input/damage_evolution/: with_damage_1Em1.prm  with_damage_1Em2.prm
input/parameter_files/: GACM2023.prm  SPP2013.prm  euler_angles.txt  semicoupled_rve.prm  simple_shear.prm
input/rate_dependence/: atan_1Em3_1.prm  erf_1Em3_1.prm  erf_1Em5_1.prm  erf_1Em5_1_long.prm  erf_1Em6_1.prm  erf_1Em7_1.prm  erf_1Em8_1.prm  gd_1Em8_1.prm  sqrt_1Em5_1.prm  sqrt_1Em7_1.prm  tanh_1Em3_1.prm  tanh_1Em4_1.prm  tanh_1Em7_1.prm
input/simple_shear/: double_slip_hl_125e-2_Ht_0.prm  double_slip_hl_125e-2_Ht_2e-1.prm  double_slip_hl_125e0_Ht_0.prm  double_slip_hl_125e0_Ht_2e-1.prm  no_slips.prm  single_slip_hl_125e-2_Ht_0.prm  single_slip_hl_125e0_Ht_0.prm  slip_direction.txt
input/simple_shear_Bittencourt/: double_slip_hl_125e-2_Ht_0.prm  double_slip_hl_125e-2_Ht_2e-1.prm  double_slip_hl_125e-2_Ht_2e-2.prm  double_slip_hl_125e0_Ht_0.prm  double_slip_hl_125e0_Ht_2e-1.prm  double_slip_hl_125e0_Ht_2e-2.prm  double_slip_hl_25_Ht_0.prm  double_slip_hl_25_Ht_2e-1.prm  double_slip_hl_25_Ht_2e-2.prm  double_slip_hl_25_Ht_2e0 copy.prm  double_slip_hl_25_Ht_2e0.prm  double_slip_hl_35e-1_Ht_2e0.prm  no_slips.prm  single_slip_hl_125e-2_Ht_0.prm  single_slip_hl_125e0_Ht_0.prm
input/simple_shear_Kergassner/: double_slip_lh_1_H_0.prm  double_slip_lh_2_H_0.prm  double_slip_lh_2e-1_H_0.prm  double_slip_lh_2e-1_H_100.prm  double_slip_lh_2e-1_H_1000.prm  euler_angles_10_0_0.txt  grain_boundaries_lh_2e-1.prm  grain_boundaries_lh_2e0.prm  grain_boundaries_lh_2e0_alpha_0.prm  grain_boundaries_lh_2e0_alpha_20.prm  grain_boundaries_lh_5e0_lambda_0.prm  grain_boundaries_lh_5e0_lambda_1e4.prm
input/simple_shear_Lara/: double_slip_jump_false_alpha_15_lambda_0e0_gamma_10e-2.prm  double_slip_jump_false_alpha_15_lambda_1e3_gamma_10e-2.prm  double_slip_jump_false_alpha_15_lambda_1e5_gamma_10e-2.prm  double_slip_jump_false_alpha_30_lambda_1e3_gamma_10e-2.prm  double_slip_jump_false_alpha_45_lambda_1e3_gamma_10e-2.prm  double_slip_jump_false_alpha_60_lambda_1e3_gamma_10e-2.prm  double_slip_jump_true_alpha_15_lambda_0e0_gamma_10e-2.prm  double_slip_jump_true_alpha_15_lambda_0e0_gamma_20e-2.prm  double_slip_jump_true_alpha_15_lambda_0e0_gamma_25e-3.prm  double_slip_jump_true_alpha_15_lambda_0e0_gamma_40e-2.prm  double_slip_jump_true_alpha_15_lambda_1e3_gamma_10e-2.prm  double_slip_jump_true_alpha_15_lambda_1e3_gamma_10e-2_damage_false.prm  double_slip_jump_true_alpha_15_lambda_1e3_gamma_20e-2.prm  double_slip_jump_true_alpha_15_lambda_1e3_gamma_20e-2_damage_false.prm  double_slip_jump_true_alpha_15_lambda_1e3_gamma_20e-2_delta_125Em4.prm  (+34 more)
python/: cohesive_law.py  decohesion.py  newton_method.py  plot_homogenization_data.py  plot_residual_stress_evolution.py  rate_dependence.py  run_simple_shear.py  simple_shear.py  simple_shear_Bittencourt.py  simple_shear_Kergassner.py  simple_shear_with_microtraction_Kergassner.py
source/: CMakeLists.txt  boundary_conditions.cc  constitutive_laws.cc  crystal_data.cc  fe_field.cc  line_search.cc  postprocessing.cc  run_time_parameters.cc  utilities.cc
source/gradient_crystal_plasticity/: active_set.cc  assembly.cc  assembly_data.cc  gradient_crystal_plasticity_solver.cc  quadrature_point_history.cc  setup.cc  solve.cc
src/: CMakeLists.txt  constitutive_equations.cc  constitutive_laws.cc  crystal_data.cc  fe_field.cc  postprocessing.cc  run_time_parameters.cc  utilities.cc
src/gradient_crystal_plasticity/: assembly.cc  assembly_data.cc  gradient_crystal_plasticity_solver.cc  line_search.cc  quadrature_point_history.cc  setup.cc  solve.cc
tests/: CMakeLists.txt  compute_trial_microstress.cc  compute_trial_microstress.output  constitutive_laws_test.cc  crystal_data_test.cc  euler_angles.txt  fe_collection_test.cc  line_search_test.cc  line_search_test.output  make_periodicity_constraints.cc  mark_interface_test.cc  material_id_test.cc  quadrature_point_history_test.cc  slip_directions.txt  slip_normals.txt
tests/input/: 2d.prm  3d.prm  3d_euler_angles.txt  3d_slip_directions.txt  3d_slip_normals.txt  prm.prm  slip_directions.txt
(+204 files in other folders)
